...
		[LanguageKeys.fr_FR]: 'Réinitialiser',
		[LanguageKeys.ru_RU]: 'Сбросить',
		[LanguageKeys.tr_TR]: 'Sıfırla',
		[LanguageKeys.zh_CN]: '重置'
	},
	confirm: {
		[LanguageKeys.de_DE]: 'Bestätigen',
		[LanguageKeys.en_US]: 'Confirm',
		[LanguageKeys.ar_SA]: 'تأكيد',
		[LanguageKeys.es_ES]: 'Confirmar',
		[LanguageKeys.fr_FR]: 'Confirmer',
		[LanguageKeys.ru_RU]: 'Подтвердить',
		[LanguageKeys.tr_TR]: 'Onayla',
...
		[LanguageKeys.fr_FR]: 'Nouveau',
		[LanguageKeys.ru_RU]: 'Новый',
		[LanguageKeys.tr_TR]: 'Yeni',
		[LanguageKeys.zh_CN]: '新的'
	},
	attention: {
		[LanguageKeys.de_DE]: 'Achtung!',
		[LanguageKeys.en_US]: 'Attention!',
		[LanguageKeys.ar_SA]: 'انتباه!',
		[LanguageKeys.es_ES]: '¡Atención!',
		[LanguageKeys.fr_FR]: 'Attention!',
		[LanguageKeys.ru_RU]: 'Внимание!',
		[LanguageKeys.tr_TR]: 'Dikkat!',
...
		[LanguageKeys.fr_FR]: 'jusqu\'à',
		[LanguageKeys.ru_RU]: 'до',
		[LanguageKeys.tr_TR]: 'kadar',
		[LanguageKeys.zh_CN]: '直到'
	},
	today: {
		[LanguageKeys.de_DE]: 'Heute',
		[LanguageKeys.en_US]: 'Today',
		[LanguageKeys.ar_SA]: 'اليوم',
		[LanguageKeys.es_ES]: 'Hoy',
		[LanguageKeys.fr_FR]: 'Aujourd\'hui',
		[LanguageKeys.ru_RU]: 'Сегодня',
		[LanguageKeys.tr_TR]: 'Bugün',
...
		[LanguageKeys.fr_FR]: 'Cacher',
		[LanguageKeys.ru_RU]: 'Скрыть',
		[LanguageKeys.tr_TR]: 'Gizle',
		[LanguageKeys.zh_CN]: '隐藏'
	},
	continue_without_account: {
		[LanguageKeys.de_DE]: 'Ohne Account fortfahren',
		[LanguageKeys.en_US]: 'Continue without account',
		[LanguageKeys.ar_SA]: 'المتابعة بدون حساب',
		[LanguageKeys.es_ES]: 'Continuar sin cuenta',
		[LanguageKeys.fr_FR]: 'Continuer sans compte',
		[LanguageKeys.ru_RU]: 'Продолжить без аккаунта',
		[LanguageKeys.tr_TR]: 'Hesap olmadan devam et',
...
